Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7251

Search backwards in FakeVim is broken if incremental search mode is on

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 3.1.0
    • Qt Creator 2.4.1
    • FakeVim
    • None
    • Ubuntu 11.10
    • fc5799367c32b2ff298b6dbbaa20535fcc5a54b7

      In FakeVim with incremental search enabled search backwards starts the search over with every new character typed. For example, if text is

      stats.start();

      And the current cursor position is at the end, and I start searching backwards, when I type 's', it will reposition the cursor to the beginning of word 'start' (which is expected). If I press 't' then, Vim would remain at that position (since it still matched the search), while Qt Creator will reposition me to the beginning of word 'stats'.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            skidanovalex Alexander Skidanov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes